--- a/src/css/themes/infragistics2012/infragistics.theme.css
+++ b/src/css/themes/infragistics2012/infragistics.theme.css
@@ -3309,7 +3309,7 @@ body .ui-tooltip {
   border: 1px solid transparent;
 }
 .ui-igedit.ui-state-default .ui-icon {
-  color: #888888;
+  color: #ffffff;
 }
 .ui-state-hover .ui-icon.ui-iggrid-filterbutton.ui-state-hover,
 .ui-state-hover .ui-icon.ui-iggrid-filterbutton,
@@ -3543,6 +3543,16 @@ ui-iggrid-groupbyarea a,
 }
 .ui-iggrid tbody .ui-iggrid-mergedcell.ui-iggrid-mergedcellsbottom:not(.ui-state-active) {
   border-bottom-color: #DCDCDC;
+}
+.ui-iggrid-deletebutton .ui-icon,
+.ui-iggrid-featurechooserbutton .ui-icon,
+.ui-iggrid-indicatorcontainer .ui-icon,
+.ui-datepicker-header .ui-icon {
+  color: #ffffff;
+}
+.ui-state-hover .ui-igcheckbox-container .ui-icon,
+.ui-state-focus .ui-igcheckbox-container .ui-icon {
+  color: #888888;
 }
 /*****************/
 /* Notifier      */
