Fix icons color

--- a/src/css/themes/infragistics2012/modules/infragistics.ui.grid.less
+++ b/src/css/themes/infragistics2012/modules/infragistics.ui.grid.less
@@ -282,7 +282,7 @@
 }
 
 .ui-igedit.ui-state-default .ui-icon {
-  color: @ui-icons-dark;
+  color: @ui-icons-light;
 }
 
 .ui-state-hover .ui-icon.ui-iggrid-filterbutton.ui-state-hover,
@@ -551,4 +551,18 @@ ui-iggrid-groupbyarea a,
 
 .ui-iggrid tbody .ui-iggrid-mergedcell.ui-iggrid-mergedcellsbottom:not(.ui-state-active) {
   border-bottom-color: #DCDCDC;
+}
+
+.ui-iggrid-deletebutton .ui-icon,
+.ui-iggrid-featurechooserbutton .ui-icon,
+.ui-iggrid-indicatorcontainer .ui-icon,
+.ui-datepicker-header .ui-icon
+{
+  color: @ui-icons-light;
+}
+
+
+.ui-state-hover .ui-igcheckbox-container .ui-icon,
+.ui-state-focus .ui-igcheckbox-container .ui-icon {
+  color: @ui-icons-dark;
 }
