Adding a fix for #1984.

--- a/src/css/structure/modules/infragistics.ui.editors.css
+++ b/src/css/structure/modules/infragistics.ui.editors.css
@@ -226,3 +226,7 @@
 .ui-igedit-textarea {
 	resize: none;
 }
+
+.ui-state-focus.ui-state-default.ui-state-hover > .ui-icon, .ui-state-focus > .ui-icon {
+	color:#888;
+}
