Adding a comment related to the fix.

--- a/src/css/structure/modules/infragistics.ui.editors.css
+++ b/src/css/structure/modules/infragistics.ui.editors.css
@@ -227,6 +227,7 @@
 	resize: none;
 }
 
+ /* V.A. adding a fix for issue #1984 "igCheckboxEditor: Checked icon is invisible if the default bootstrap4 theme is applied." The fix is based on the suggested workaround in the bug description. */
 .ui-state-focus.ui-state-default.ui-state-hover > .ui-icon, .ui-state-focus > .ui-icon {
 	color:#888;
 }
