--- a/src/css/structure/modules/infragistics.ui.editors.css
+++ b/src/css/structure/modules/infragistics.ui.editors.css
@@ -227,7 +227,7 @@
 	resize: none;
 }
 
- /* V.A. 12/12/2019 adding a fix for issue #1984 "igCheckboxEditor: Checked icon is invisible if the default bootstrap4 theme is applied." The fix is based on the suggested workaround in the bug description. */
+ /* V.A. 12/12/2019 Adding a fix for issue #1984 "igCheckboxEditor: Checked icon is invisible if the default bootstrap4 theme is applied." The fix is based on the suggested workaround in the bug description. */
 .ui-state-focus.ui-state-default.ui-state-hover > .ui-icon, .ui-state-focus > .ui-icon {
 	color:#888;
 }
