--- a/src/css/themes/bootstrap4/default/infragistics.theme.css
+++ b/src/css/themes/bootstrap4/default/infragistics.theme.css
@@ -4293,3 +4293,8 @@ Spreadsheet colors
   border: 0; }
 
 /*# sourceMappingURL=infragistics.theme.css.map */
+
+ /* V.A. 07/01/2020 Adding a fix for issue #1984 "igCheckboxEditor: Checked icon is invisible if the default bootstrap4 theme is applied." The fix is based on the suggested workaround in the bug description. */
+ .ui-state-focus.ui-state-default.ui-state-hover > .ui-icon, .ui-state-focus > .ui-icon {
+	color:#888;
+}
