--- a/src/css/themes/bootstrap4/default/infragistics.theme.css
+++ b/src/css/themes/bootstrap4/default/infragistics.theme.css
@@ -2746,6 +2746,11 @@ body .ui-tooltip {
   background: #0275d8;
   color: #fff; }
 
+  /* V.A. 12/12/2019 adding a fix for issue #1984 "igCheckboxEditor: Checked icon is invisible if the default bootstrap4 theme is applied." The fix is based on the suggested workaround in the bug description. */
+  .ui-state-focus.ui-state-default.ui-state-hover > .ui-icon, .ui-state-focus > .ui-icon {
+   color:#888;
+ }
+
 /**********/
 /* igGrid */
 /**********/
