updated chart colors

--- a/src/css/themes/infragistics/mixins.less
+++ b/src/css/themes/infragistics/mixins.less
@@ -76,78 +76,80 @@
   border: 1px solid @chartGradualPalette10!important;
 }
 
-.chartPalette11 {
-  background-color: @chartGradualPalette11!important;
-  border: 1px solid @chartGradualPalette11!important;
-}
+// NOTE: charts use a palette only with 10 colors
+// .chartPalette11 {
+//   background-color: @chartGradualPalette11!important;
+//   border: 1px solid @chartGradualPalette11!important;
+// }
 
-.chartPalette12 {
-  background-color: @chartGradualPalette12!important;
-  border: 1px solid @chartGradualPalette12!important;
-}
+// .chartPalette12 {
+//   background-color: @chartGradualPalette12!important;
+//   border: 1px solid @chartGradualPalette12!important;
+// }
 
 
 // Chart Marker Palettes
 
 .chartMarkerPalette1 {
-  background-color: #fff!important;
-  border: 1px solid @chartGradualPalette1!important;
+  background-color: @chartGradualPalette1!important;
+  border: 1px solid @chartMarkerOutline!important;
 }
 
 .chartMarkerPalette2 {
-  background-color: #fff!important;
-  border: 1px solid @chartGradualPalette2!important;
+  background-color: @chartGradualPalette2!important;
+  border: 1px solid @chartMarkerOutline!important;
 }
 
 .chartMarkerPalette3 {
-  background-color: #fff!important;
-  border: 1px solid @chartGradualPalette3!important;
+  background-color: @chartGradualPalette3!important;
+  border: 1px solid @chartMarkerOutline!important;
 }
 
 .chartMarkerPalette4 {
-  background-color: #fff!important;
-  border: 1px solid @chartGradualPalette4!important;
+  background-color: @chartGradualPalette4!important;
+  border: 1px solid @chartMarkerOutline!important;
 }
 
 .chartMarkerPalette5 {
-  background-color: #fff!important;
-  border: 1px solid @chartGradualPalette5!important;
+  background-color: @chartGradualPalette5!important;
+  border: 1px solid @chartMarkerOutline!important;
 }
 
 .chartMarkerPalette6 {
-  background-color: #fff!important;
-  border: 1px solid @chartGradualPalette6!important;
+  background-color: @chartGradualPalette6!important;
+  border: 1px solid @chartMarkerOutline!important;
 }
 
 .chartMarkerPalette7 {
-  background-color: #fff!important;
-  border: 1px solid @chartGradualPalette7!important;
+  background-color: @chartGradualPalette7!important;
+  border: 1px solid @chartMarkerOutline!important;
 }
 
 .chartMarkerPalette8 {
-  background-color: #fff!important;
-  border: 1px solid @chartGradualPalette8!important;
+  background-color: @chartGradualPalette8!important;
+  border: 1px solid @chartMarkerOutline!important;
 }
 
 .chartMarkerPalette9 {
-  background-color: #fff!important;
-  border: 1px solid @chartGradualPalette9!important;
+  background-color: @chartGradualPalette9!important;
+  border: 1px solid @chartMarkerOutline!important;
 }
 
 .chartMarkerPalette10 {
-  background-color: #fff!important;
-  border: 1px solid @chartGradualPalette10!important;
+  background-color: @chartGradualPalette10!important;
+  border: 1px solid @chartMarkerOutline!important;
 }
 
-.chartMarkerPalette11 {
-  background-color: #fff!important;
-  border: 1px solid @chartGradualPalette11!important;
-}
+// NOTE: charts use a palette only with 10 colors
+// .chartMarkerPalette11 {
+//   background-color: #fff!important;
+//   border: 1px solid @chartGradualPalette11!important;
+// }
 
-.chartMarkerPalette12 {
-  background-color: #fff!important;
-  border: 1px solid @chartGradualPalette12!important;
-}
+// .chartMarkerPalette12 {
+//   background-color: #fff!important;
+//   border: 1px solid @chartGradualPalette12!important;
+// }
 
 
 
@@ -209,15 +211,16 @@
   border: 1px solid #fff!important;
 }
 
-.doughnutPalette11 {
-  background-color: @chartGradualPalette11!important;
-  border: 1px solid #fff!important;
-}
+// NOTE: charts use a palette only with 10 colors
+// .doughnutPalette11 {
+//   background-color: @chartGradualPalette11!important;
+//   border: 1px solid #fff!important;
+// }
 
-.doughnutPalette12 {
-  background-color: @chartGradualPalette12!important;
-  border: 1px solid #fff!important;
-}
+// .doughnutPalette12 {
+//   background-color: @chartGradualPalette12!important;
+//   border: 1px solid #fff!important;
+// }
 
 
 // Shadows
