--- a/src/css/themes/infragistics/variables.less
+++ b/src/css/themes/infragistics/variables.less
@@ -30,22 +30,25 @@
 @igGray11: #666;
 
 // Gradual palette, used mainly for bulletGraph and linearGauge
-@chartGradualPalette1: #7446B9;
-@chartGradualPalette2: #9FB328;
-@chartGradualPalette3: #F96232;
-@chartGradualPalette4: #2E9CA6;
-@chartGradualPalette5: #DC3F76;
-@chartGradualPalette6: #FF9800;
-@chartGradualPalette7: #3F51B5;
-@chartGradualPalette8: #439C47;
-@chartGradualPalette9: #795548;
-@chartGradualPalette10: #9A9A9A;
-@chartGradualPalette11: #C62828;
-@chartGradualPalette12: #9f725f;
+@chartGradualPalette1: #8bdc5c;
+@chartGradualPalette2: #8b5bb1;
+@chartGradualPalette3: #6db1ff;
+@chartGradualPalette4: #f8a15f;
+@chartGradualPalette5: #ee5879;
+@chartGradualPalette6: #735656;
+@chartGradualPalette7: #f7d262;
+@chartGradualPalette8: #8ce7d9;
+@chartGradualPalette9: #e051a9;
+@chartGradualPalette10: #a8a8b7;
+// NOTE: charts use a palette only with 10 colors
+// @chartGradualPalette11: #C62828;
+// @chartGradualPalette12: #9f725f;
 
-@chartPaletteNegative: #c33d4a;
+@chartPaletteNegative: #ee5879;
 
-//lineargauge, bulletgraph, radialgauge range palette
+@chartMarkerOutline: #ffffff;
+
+// linear-gauge, bullet-graph, radial-gauge range palette
 @range-1: #005E9C;
 @range-2: #0078C8;
 @range-3: #0092F4;
