--- a/src/css/themes/infragistics/modules/infragistics.ui.chart.less
+++ b/src/css/themes/infragistics/modules/infragistics.ui.chart.less
@@ -42,13 +42,14 @@
   .chartPalette10;
 }
 
-.ui-chart-palette-11 {
-  .chartPalette11;
-}
+// NOTE: charts use a palette only with 10 colors
+// .ui-chart-palette-11 {
+//   .chartPalette11;
+// }
 
-.ui-chart-palette-12 {
-  .chartPalette12;
-}
+// .ui-chart-palette-12 {
+//   .chartPalette12;
+// }
 
 .ui-chart-maker-palette-1 {
   .chartMarkerPalette1;
@@ -90,13 +91,14 @@
   .chartMarkerPalette10;
 }
 
-.ui-chart-maker-palette-11 {
-  .chartMarkerPalette11;
-}
+// NOTE: charts use a palette only with 10 colors
+// .ui-chart-maker-palette-11 {
+//   .chartMarkerPalette11;
+// }
 
-.ui-chart-maker-palette-12 {
-  .chartMarkerPalette12;
-}
+// .ui-chart-maker-palette-12 {
+//   .chartMarkerPalette12;
+// }
 .ui-chart-legend,.ui-chart-piechart-container {
   border:none;
 }
@@ -189,13 +191,14 @@
   .doughnutPalette10;
 }
 
-.ui-doughnut-palette-11 {
-  .doughnutPalette11;
-}
+// NOTE: charts use a palette only with 10 colors
+// .ui-doughnut-palette-11 {
+//   .doughnutPalette11;
+// }
 
-.ui-doughnut-palette-12 {
-  .doughnutPalette12;
-}
+// .ui-doughnut-palette-12 {
+//   .doughnutPalette12;
+// }
 
 /*******************/
 /* Sparkline chart */
