--- a/src/css/themes/infragistics/infragistics.theme.css
+++ b/src/css/themes/infragistics/infragistics.theme.css
@@ -2106,101 +2106,103 @@ input.ui-igbutton {
 /* igChart */
 /***********/
 .ui-chart-palette-1 {
-  background-color: #7446B9 !important;
-  border: 1px solid #7446B9 !important;
+  background-color: #8bdc5c !important;
+  border: 1px solid #8bdc5c !important;
 }
 .ui-chart-palette-2 {
-  background-color: #9FB328 !important;
-  border: 1px solid #9FB328 !important;
+  background-color: #8b5bb1 !important;
+  border: 1px solid #8b5bb1 !important;
 }
 .ui-chart-palette-3 {
-  background-color: #F96232 !important;
-  border: 1px solid #F96232 !important;
+  background-color: #6db1ff !important;
+  border: 1px solid #6db1ff !important;
 }
 .ui-chart-palette-4 {
-  background-color: #2E9CA6 !important;
-  border: 1px solid #2E9CA6 !important;
+  background-color: #f8a15f !important;
+  border: 1px solid #f8a15f !important;
 }
 .ui-chart-palette-5 {
-  background-color: #DC3F76 !important;
-  border: 1px solid #DC3F76 !important;
+  background-color: #ee5879 !important;
+  border: 1px solid #ee5879 !important;
 }
 .ui-chart-palette-6 {
-  background-color: #FF9800 !important;
-  border: 1px solid #FF9800 !important;
+  background-color: #735656 !important;
+  border: 1px solid #735656 !important;
 }
 .ui-chart-palette-7 {
-  background-color: #3F51B5 !important;
-  border: 1px solid #3F51B5 !important;
+  background-color: #f7d262 !important;
+  border: 1px solid #f7d262 !important;
 }
 .ui-chart-palette-8 {
-  background-color: #439C47 !important;
-  border: 1px solid #439C47 !important;
+  background-color: #8ce7d9 !important;
+  border: 1px solid #8ce7d9 !important;
 }
 .ui-chart-palette-9 {
-  background-color: #795548 !important;
-  border: 1px solid #795548 !important;
+  background-color: #e051a9 !important;
+  border: 1px solid #e051a9 !important;
 }
 .ui-chart-palette-10 {
-  background-color: #9A9A9A !important;
-  border: 1px solid #9A9A9A !important;
+  background-color: #a8a8b7 !important;
+  border: 1px solid #a8a8b7 !important;
 }
-.ui-chart-palette-11 {
+/* NOTE: charts use a palette only with 10 colors */
+/* .ui-chart-palette-11 {
   background-color: #C62828 !important;
   border: 1px solid #C62828 !important;
 }
 .ui-chart-palette-12 {
   background-color: #9f725f !important;
   border: 1px solid #9f725f !important;
-}
+} */
 .ui-chart-maker-palette-1 {
-  background-color: #fff !important;
-  border: 1px solid #7446B9 !important;
+  background-color: #8bdc5c !important;
+  border: 1px solid #ffffff !important;
 }
 .ui-chart-maker-palette-2 {
-  background-color: #fff !important;
-  border: 1px solid #9FB328 !important;
+  background-color: #8b5bb1 !important;
+  border: 1px solid #ffffff !important;
 }
 .ui-chart-maker-palette-3 {
-  background-color: #fff !important;
-  border: 1px solid #F96232 !important;
+  background-color: #6db1ff !important;
+  border: 1px solid #ffffff !important;
 }
 .ui-chart-maker-palette-4 {
-  background-color: #fff !important;
-  border: 1px solid #2E9CA6 !important;
+  background-color: #f8a15f !important;
+  border: 1px solid #ffffff !important;
 }
 .ui-chart-maker-palette-5 {
-  background-color: #fff !important;
-  border: 1px solid #DC3F76 !important;
+  background-color: #ee5879 !important;
+  border: 1px solid #ffffff !important;
 }
 .ui-chart-maker-palette-6 {
-  background-color: #fff !important;
-  border: 1px solid #FF9800 !important;
+  background-color: #735656 !important;
+  border: 1px solid #ffffff !important;
 }
 .ui-chart-maker-palette-7 {
-  background-color: #fff !important;
-  border: 1px solid #3F51B5 !important;
+  background-color: #f7d262 !important;
+  border: 1px solid #ffffff !important;
 }
 .ui-chart-maker-palette-8 {
-  background-color: #fff !important;
-  border: 1px solid #439C47 !important;
+  background-color: #8ce7d9 !important;
+  border: 1px solid #ffffff !important;
 }
 .ui-chart-maker-palette-9 {
-  background-color: #fff !important;
-  border: 1px solid #795548 !important;
+  background-color: #e051a9 !important;
+  border: 1px solid #ffffff !important;
 }
 .ui-chart-maker-palette-10 {
-  background-color: #fff !important;
-  border: 1px solid #9A9A9A !important;
+  background-color: #a8a8b7 !important;
+  border: 1px solid #ffffff !important;
 }
-.ui-chart-maker-palette-11 {
+/* NOTE: charts use a palette only with 10 colors */
+/* .ui-chart-maker-palette-11 {
   background-color: #fff !important;
   border: 1px solid #C62828 !important;
 }
 .ui-chart-maker-palette-12 {
   background-color: #fff !important;
   border: 1px solid #9f725f !important;
-}
+} */
 .ui-chart-legend,
 .ui-chart-piechart-container {
   border: none;
@@ -2245,53 +2247,54 @@ input.ui-igbutton {
 /* Doughnut Chart */
 /******************/
 .ui-doughnut-palette-1 {
-  background-color: #7446B9 !important;
+  background-color: #8bdc5c !important;
   border: 1px solid #fff !important;
 }
 .ui-doughnut-palette-2 {
-  background-color: #9FB328 !important;
+  background-color: #8b5bb1 !important;
   border: 1px solid #fff !important;
 }
 .ui-doughnut-palette-3 {
-  background-color: #F96232 !important;
+  background-color: #6db1ff !important;
   border: 1px solid #fff !important;
 }
 .ui-doughnut-palette-4 {
-  background-color: #2E9CA6 !important;
+  background-color: #f8a15f !important;
   border: 1px solid #fff !important;
 }
 .ui-doughnut-palette-5 {
-  background-color: #DC3F76 !important;
+  background-color: #ee5879 !important;
   border: 1px solid #fff !important;
 }
 .ui-doughnut-palette-6 {
-  background-color: #FF9800 !important;
+  background-color: #735656 !important;
   border: 1px solid #fff !important;
 }
 .ui-doughnut-palette-7 {
-  background-color: #3F51B5 !important;
+  background-color: #f7d262 !important;
   border: 1px solid #fff !important;
 }
 .ui-doughnut-palette-8 {
-  background-color: #439C47 !important;
+  background-color: #8ce7d9 !important;
   border: 1px solid #fff !important;
 }
 .ui-doughnut-palette-9 {
-  background-color: #795548 !important;
+  background-color: #e051a9 !important;
   border: 1px solid #fff !important;
 }
 .ui-doughnut-palette-10 {
-  background-color: #9A9A9A !important;
+  background-color: #a8a8b7 !important;
   border: 1px solid #fff !important;
 }
-.ui-doughnut-palette-11 {
+/* NOTE: charts use a palette only with 10 colors */
+/* .ui-doughnut-palette-11 {
   background-color: #C62828 !important;
   border: 1px solid #fff !important;
 }
 .ui-doughnut-palette-12 {
   background-color: #9f725f !important;
   border: 1px solid #fff !important;
-}
+} */
 /*******************/
 /* Sparkline chart */
 /*******************/
@@ -2308,11 +2311,11 @@ input.ui-igbutton {
   padding: 5px 8px;
 }
 .ui-sparkline-sparkpath {
-  background: #439C47;
+  background: #8bdc5c;
   border: 1px solid;
 }
 .ui-sparkline-negativesparkpath {
-  background: #C62828;
+  background: #ee5879;
   border: 1px solid;
 }
 .ui-sparkline-trendline {
@@ -2320,27 +2323,27 @@ input.ui-igbutton {
   border: 2px solid;
 }
 .ui-sparkline-markers {
-  background: #2E9CA6;
+  background: #8b5bb1;
   border: 3px solid;
 }
 .ui-sparkline-firstmarker {
-  background: #2E9CA6;
+  background: #f8a15f;
   border: 5px solid;
 }
 .ui-sparkline-lastmarker {
-  background: #FF9800;
+  background: #ee5879;
   border: 5px solid;
 }
 .ui-sparkline-highmarker {
-  background: #9FB328;
+  background: #6db1ff;
   border: 4px solid;
 }
 .ui-sparkline-lowmarker {
-  background: #7446B9;
+  background: #f7d262;
   border: 3px solid;
 }
 .ui-sparkline-negativemarkers {
-  background: #C62828;
+  background: #ee5879;
   border: 3px solid;
 }
 .ui-sparkline-range {
