--- a/src/css/themes/infragistics/modules/infragistics.ui.chart.less
+++ b/src/css/themes/infragistics/modules/infragistics.ui.chart.less
@@ -219,12 +219,12 @@
 }
 
 .ui-sparkline-sparkpath {
-  background: #439C47;
+  background: #8bdc5c;
   border: 1px solid;
 }
 
 .ui-sparkline-negativesparkpath {
-  background: #C62828;
+  background: #ee5879;
   border: 1px solid;
 }
 
@@ -234,32 +234,32 @@
 }
 
 .ui-sparkline-markers {
-  background: #2E9CA6;
+  background: #8b5bb1;
   border: 3px solid;
 }
 
 .ui-sparkline-firstmarker {
-  background: #2E9CA6;
+  background: #f8a15f;
   border: 5px solid;
 }
 
 .ui-sparkline-lastmarker {
-  background: #FF9800;
+  background: #ee5879;
   border: 5px solid;
 }
 
 .ui-sparkline-highmarker {
-  background: #9FB328;
+  background: #6db1ff;
   border: 4px solid;
 }
 
 .ui-sparkline-lowmarker {
-  background: #7446B9;
+  background: #f7d262;
   border: 3px solid;
 }
 
 .ui-sparkline-negativemarkers {
-  background: #C62828;
+  background: #ee5879;
   border: 3px solid;
 }
 
