--- a/src/css/themes/infragistics/mixins.less
+++ b/src/css/themes/infragistics/mixins.less
@@ -91,53 +91,53 @@
 // Chart Marker Palettes
 
 .chartMarkerPalette1 {
-  background-color: @chartGradualPalette1!important;
-  border: 1px solid @chartMarkerOutline!important;
+  background-color: @chartMarkerFill!important;
+  border: 1px solid @chartGradualPalette1!important;
 }
 
 .chartMarkerPalette2 {
-  background-color: @chartGradualPalette2!important;
-  border: 1px solid @chartMarkerOutline!important;
+  background-color: @chartMarkerFill!important;
+  border: 1px solid @chartGradualPalette2!important;
 }
 
 .chartMarkerPalette3 {
-  background-color: @chartGradualPalette3!important;
-  border: 1px solid @chartMarkerOutline!important;
+  background-color: @chartMarkerFill!important;
+  border: 1px solid @chartGradualPalette3!important;
 }
 
 .chartMarkerPalette4 {
-  background-color: @chartGradualPalette4!important;
-  border: 1px solid @chartMarkerOutline!important;
+  background-color: @chartMarkerFill!important;
+  border: 1px solid @chartGradualPalette4!important;
 }
 
 .chartMarkerPalette5 {
-  background-color: @chartGradualPalette5!important;
-  border: 1px solid @chartMarkerOutline!important;
+  background-color: @chartMarkerFill!important;
+  border: 1px solid @chartGradualPalette5!important;
 }
 
 .chartMarkerPalette6 {
-  background-color: @chartGradualPalette6!important;
-  border: 1px solid @chartMarkerOutline!important;
+  background-color: @chartMarkerFill!important;
+  border: 1px solid @chartGradualPalette6!important;
 }
 
 .chartMarkerPalette7 {
-  background-color: @chartGradualPalette7!important;
-  border: 1px solid @chartMarkerOutline!important;
+  background-color: @chartMarkerFill!important;
+  border: 1px solid @chartGradualPalette7!important;
 }
 
 .chartMarkerPalette8 {
-  background-color: @chartGradualPalette8!important;
-  border: 1px solid @chartMarkerOutline!important;
+  background-color: @chartMarkerFill!important;
+  border: 1px solid @chartGradualPalette8!important;
 }
 
 .chartMarkerPalette9 {
-  background-color: @chartGradualPalette9!important;
-  border: 1px solid @chartMarkerOutline!important;
+  background-color: @chartMarkerFill!important;
+  border: 1px solid @chartGradualPalette9!important;
 }
 
 .chartMarkerPalette10 {
-  background-color: @chartGradualPalette10!important;
-  border: 1px solid @chartMarkerOutline!important;
+  background-color: @chartMarkerFill!important;
+  border: 1px solid @chartGradualPalette10!important;
 }
 
 // NOTE: charts use a palette only with 10 colors
