--- a/src/css/themes/infragistics/variables.less
+++ b/src/css/themes/infragistics/variables.less
@@ -46,7 +46,7 @@
 
 @chartPaletteNegative: #ee5879;
 
-@chartMarkerOutline: #ffffff;
+@chartMarkerFill: #ffffff;
 
 // linear-gauge, bullet-graph, radial-gauge range palette
 @range-1: #005E9C;
