--- a/src/css/structure/modules/infragistics.ui.map.css
+++ b/src/css/structure/modules/infragistics.ui.map.css
@@ -1,74 +1,75 @@
 ﻿.ui-chart-palette-1
 {
-    border-color: #226CC8;
-    background-color: #448ADF; 
+    border-color: #8bdc5c;
+    background-color: #8bdc5c;
 }
 
 .ui-chart-palette-2
 {
-    border-color: #A82E0B;
-    background-color: #DA3C0E;   
+    border-color: #8b5bb1;
+    background-color: #8b5bb1;
 }
 
 .ui-chart-palette-3
 {
-    border-color: #556420;
-    background-color: #7C932F;   
+    border-color: #6db1ff;
+    background-color: #6db1ff;
 }
 
 .ui-chart-palette-4
 {
-    border-color: #D6BB03;
-    background-color: #FCE22E;   
+    border-color: #f8a15f;
+    background-color: #f8a15f;
 }
 
 .ui-chart-palette-5
 {
-    border-color: #DA1896;
-    background-color: #EB49B3;   
+    border-color: #ee5879;
+    background-color: #ee5879;
 }
 
 .ui-chart-palette-6
 {
-    border-color: #6D438F;
-    background-color: #8F5FB8;   
+    border-color: #735656;
+    background-color: #735656;
 }
 
 .ui-chart-palette-7
 {
-    border-color: #5B91F4;
-    background-color: #8FB4F8;   
+    border-color: #f7d262;
+    background-color: #f7d262;
 }
 
 .ui-chart-palette-8
 {
-    border-color: #FF464A;
-    background-color: #FF6F72;   
+    border-color: #8ce7d9;
+    background-color: #8ce7d9;
 }
 
 .ui-chart-palette-9
 {
-    border-color: #C78A0C;
-    background-color: #F1A70E;   
+    border-color: #e051a9;
+    background-color: #e051a9;
 }
 
 .ui-chart-palette-10
 {
-    border-color: #562B79;
-    background-color: #763AA7;     
+    border-color: #a8a8b7;
+    background-color: #a8a8b7;
 }
 
-.ui-chart-palette-11
+/* NOTE: charts use a palette only with 10 colors */
+/* .ui-chart-palette-11
 {
     border-color: #789818;
-    background-color: #92B81F;   
+    background-color: #92B81F;
 }
 
 .ui-chart-palette-12
 {
     border-color: #EE6C1E;
-    background-color: #DA3C0E; 
-}
+    background-color: #DA3C0E;
+} */
 
 .ui-chart-container
 {
@@ -95,7 +96,7 @@
 
 .ui-chart-legend-item-badge
 {
-    vertical-align: middle;   
+    vertical-align: middle;
 }
 
 .ui-chart-tooltip
@@ -182,10 +183,10 @@
 	text-align:center;
 	font-size: 0;
 }
-.ui-chart-toolbar ul 
+.ui-chart-toolbar ul
 {
 }
-.ui-chart-toolbar li 
+.ui-chart-toolbar li
 {
     list-style: none;
     /*float: left;*/
@@ -193,15 +194,15 @@
     vertical-align: middle;
 }
 .ui-chart-slider {
-	width: 40px; 
-	padding:5px 9px; 
+	width: 40px;
+	padding:5px 9px;
 }
 .ui-chart-opd-button {
 	position: absolute !important; top: 5px; right: 5px;
 }
 
 .ui-chart-toolbar
-{  
+{
 }
 .ui-chart-toolbar button
 {
@@ -213,7 +214,7 @@
 {
     line-height:8px;
 }
-.ui-chart-toolbar .ui-slider-handle 
+.ui-chart-toolbar .ui-slider-handle
 {
     height:18px;
     margin-left: -12px;
@@ -255,7 +256,7 @@
 }
 .igTouch .ui-chart-slider
 {
- width:90%;    
+ width:90%;
  padding: 0 30px;
 }
 .igTouch .ui-chart-toolbar .ui-slider-handle
