--- a/src/css/structure/modules/infragistics.ui.combo.css
+++ b/src/css/structure/modules/infragistics.ui.combo.css
@@ -124,6 +124,8 @@
     cursor: default;
 	white-space: nowrap;
     background-image: none;
+    /* M.A. August 31th, 2021 Bug #2119 & #2124 Add default height */
+    height: 1.3125rem;
 }
 
 .ui-igcombo-listitemtextwithcheckbox {
