updated colors of chart series

--- a/src/css/structure/modules/infragistics.ui.map.css
+++ b/src/css/structure/modules/infragistics.ui.map.css
@@ -1,31 +1,31 @@
 ﻿.ui-chart-palette-1
 {
-    border-color: #8bdc5c;
-    background-color: #8bdc5c;
+    border-color: #8BDC5C;
+    background-color: #8BDC5C;
 }
 
 .ui-chart-palette-2
 {
-    border-color: #8b5bb1;
-    background-color: #8b5bb1;
+    border-color: #8961A9;
+    background-color: #8961A9;
 }
 
 .ui-chart-palette-3
 {
-    border-color: #6db1ff;
-    background-color: #6db1ff;
+    border-color: #6DB1FF;
+    background-color: #6DB1FF;
 }
 
 .ui-chart-palette-4
 {
-    border-color: #f8a15f;
-    background-color: #f8a15f;
+    border-color: #82E9D9;
+    background-color: #82E9D9;
 }
 
 .ui-chart-palette-5
 {
-    border-color: #ee5879;
-    background-color: #ee5879;
+    border-color: #EA3C63;
+    background-color: #EA3C63;
 }
 
 .ui-chart-palette-6
@@ -36,26 +36,26 @@
 
 .ui-chart-palette-7
 {
-    border-color: #f7d262;
-    background-color: #f7d262;
+    border-color: #F8CE4F;
+    background-color: #F8CE4F;
 }
 
 .ui-chart-palette-8
 {
-    border-color: #8ce7d9;
-    background-color: #8ce7d9;
+    border-color: #A8A8B7;
+    background-color: #A8A8B7;
 }
 
 .ui-chart-palette-9
 {
-    border-color: #e051a9;
-    background-color: #e051a9;
+    border-color: #E051A9;
+    background-color: #E051A9;
 }
 
 .ui-chart-palette-10
 {
-    border-color: #a8a8b7;
-    background-color: #a8a8b7;
+    border-color: #FF903B;
+    background-color: #FF903B;
 }
 
 /* NOTE: charts use a palette only with 10 colors */
