--- a/src/css/themes/infragistics/modules/infragistics.ui.chart.less
+++ b/src/css/themes/infragistics/modules/infragistics.ui.chart.less
@@ -219,7 +219,7 @@
 }
 
 .ui-sparkline-sparkpath {
-  background: #8bdc5c;
+  background: #8BDC5C;
   border: 1px solid;
 }
 
@@ -234,12 +234,12 @@
 }
 
 .ui-sparkline-markers {
-  background: #8b5bb1;
+  background: #8961A9;
   border: 3px solid;
 }
 
 .ui-sparkline-firstmarker {
-  background: #f8a15f;
+  background: #82E9D9;
   border: 5px solid;
 }
 
@@ -249,12 +249,12 @@
 }
 
 .ui-sparkline-highmarker {
-  background: #6db1ff;
+  background: #6DB1FF;
   border: 4px solid;
 }
 
 .ui-sparkline-lowmarker {
-  background: #f7d262;
+  background: #F8CE4F;
   border: 3px solid;
 }
 
