--- a/src/css/themes/infragistics/variables.less
+++ b/src/css/themes/infragistics/variables.less
@@ -30,16 +30,16 @@
 @igGray11: #666;
 
 // Gradual palette, used mainly for bulletGraph and linearGauge
-@chartGradualPalette1: #8bdc5c;
-@chartGradualPalette2: #8b5bb1;
-@chartGradualPalette3: #6db1ff;
-@chartGradualPalette4: #f8a15f;
-@chartGradualPalette5: #ee5879;
-@chartGradualPalette6: #735656;
-@chartGradualPalette7: #f7d262;
-@chartGradualPalette8: #8ce7d9;
-@chartGradualPalette9: #e051a9;
-@chartGradualPalette10: #a8a8b7;
+@chartGradualPalette1:  #8BDC5C;
+@chartGradualPalette2:  #8961A9;
+@chartGradualPalette3:  #6DB1FF;
+@chartGradualPalette4:  #82E9D9;
+@chartGradualPalette5:  #EA3C63;
+@chartGradualPalette6:  #735656;
+@chartGradualPalette7:  #F8CE4F;
+@chartGradualPalette8:  #A8A8B7;
+@chartGradualPalette9:  #E051A9;
+@chartGradualPalette10: #FF903B;
 // NOTE: charts use a palette only with 10 colors
 // @chartGradualPalette11: #C62828;
 // @chartGradualPalette12: #9f725f;
