--- a/src/css/themes/infragistics/infragistics.theme.css
+++ b/src/css/themes/infragistics/infragistics.theme.css
@@ -24,49 +24,49 @@
   color: #444444;
 }
 .chartPalette1 {
-  background-color: #8bdc5c !important;
-  border: 1px solid #8bdc5c !important;
+  background-color: #8BDC5C !important;
+  border: 1px solid #8BDC5C !important;
 }
 .chartPalette2 {
-  background-color: #8b5bb1 !important;
-  border: 1px solid #8b5bb1 !important;
+  background-color: #8961A9 !important;
+  border: 1px solid #8961A9 !important;
 }
 .chartPalette3 {
-  background-color: #6db1ff !important;
-  border: 1px solid #6db1ff !important;
+  background-color: #6DB1FF !important;
+  border: 1px solid #6DB1FF !important;
 }
 .chartPalette4 {
-  background-color: #f8a15f !important;
-  border: 1px solid #f8a15f !important;
+  background-color: #82E9D9 !important;
+  border: 1px solid #82E9D9 !important;
 }
 .chartPalette5 {
-  background-color: #ee5879 !important;
-  border: 1px solid #ee5879 !important;
+  background-color: #EA3C63 !important;
+  border: 1px solid #EA3C63 !important;
 }
 .chartPalette6 {
   background-color: #735656 !important;
   border: 1px solid #735656 !important;
 }
 .chartPalette7 {
-  background-color: #f7d262 !important;
-  border: 1px solid #f7d262 !important;
+  background-color: #F8CE4F !important;
+  border: 1px solid #F8CE4F !important;
 }
 .chartPalette8 {
-  background-color: #8ce7d9 !important;
-  border: 1px solid #8ce7d9 !important;
+  background-color: #A8A8B7 !important;
+  border: 1px solid #A8A8B7 !important;
 }
 .chartPalette9 {
-  background-color: #e051a9 !important;
-  border: 1px solid #e051a9 !important;
+  background-color: #E051A9 !important;
+  border: 1px solid #E051A9 !important;
 }
 .chartPalette10 {
-  background-color: #a8a8b7 !important;
-  border: 1px solid #a8a8b7 !important;
+  background-color: #FF903B !important;
+  border: 1px solid #FF903B !important;
 }
 /* NOTE: charts use a palette only with 10 colors */
 /* .chartPalette11 {
-  background-color: #a8a8b7 !important;
-  border: 1px solid #a8a8b7 !important;
+  background-color: #FF903B !important;
+  border: 1px solid #FF903B !important;
 }
 .chartPalette12 {
   background-color: #9f725f !important;
@@ -74,23 +74,23 @@
 } */
 .chartMarkerPalette1 {
   background-color: #fff !important;
-  border: 1px solid #8bdc5c !important;
+  border: 1px solid #8BDC5C !important;
 }
 .chartMarkerPalette2 {
   background-color: #fff !important;
-  border: 1px solid #8b5bb1 !important;
+  border: 1px solid #8961A9 !important;
 }
 .chartMarkerPalette3 {
   background-color: #fff !important;
-  border: 1px solid #6db1ff !important;
+  border: 1px solid #6DB1FF !important;
 }
 .chartMarkerPalette4 {
   background-color: #fff !important;
-  border: 1px solid #f8a15f !important;
+  border: 1px solid #82E9D9 !important;
 }
 .chartMarkerPalette5 {
   background-color: #fff !important;
-  border: 1px solid #ee5879 !important;
+  border: 1px solid #EA3C63 !important;
 }
 .chartMarkerPalette6 {
   background-color: #fff !important;
@@ -98,19 +98,19 @@
 }
 .chartMarkerPalette7 {
   background-color: #fff !important;
-  border: 1px solid #f7d262 !important;
+  border: 1px solid #F8CE4F !important;
 }
 .chartMarkerPalette8 {
   background-color: #fff !important;
-  border: 1px solid #8ce7d9 !important;
+  border: 1px solid #A8A8B7 !important;
 }
 .chartMarkerPalette9 {
   background-color: #fff !important;
-  border: 1px solid #e051a9 !important;
+  border: 1px solid #E051A9 !important;
 }
 .chartMarkerPalette10 {
   background-color: #fff !important;
-  border: 1px solid #a8a8b7 !important;
+  border: 1px solid #FF903B !important;
 }
 /* NOTE: charts use a palette only with 10 colors */
 /* .chartMarkerPalette11 {
@@ -122,27 +122,27 @@
   border: 1px solid #9f725f !important;
 } */
 .chartPaletteNegative {
-  background-color: #ee5879 !important;
-  border: 1px solid #ee5879 !important;
+  background-color: #EA3C63 !important;
+  border: 1px solid #EA3C63 !important;
 }
 .doughnutPalette1 {
-  background-color: #8bdc5c !important;
+  background-color: #8BDC5C !important;
   border: 1px solid #fff !important;
 }
 .doughnutPalette2 {
-  background-color: #8b5bb1 !important;
+  background-color: #8961A9 !important;
   border: 1px solid #fff !important;
 }
 .doughnutPalette3 {
-  background-color: #6db1ff !important;
+  background-color: #6DB1FF !important;
   border: 1px solid #fff !important;
 }
 .doughnutPalette4 {
-  background-color: #f8a15f !important;
+  background-color: #82E9D9 !important;
   border: 1px solid #fff !important;
 }
 .doughnutPalette5 {
-  background-color: #ee5879 !important;
+  background-color: #EA3C63 !important;
   border: 1px solid #fff !important;
 }
 .doughnutPalette6 {
@@ -150,19 +150,19 @@
   border: 1px solid #fff !important;
 }
 .doughnutPalette7 {
-  background-color: #f7d262 !important;
+  background-color: #F8CE4F !important;
   border: 1px solid #fff !important;
 }
 .doughnutPalette8 {
-  background-color: #8ce7d9 !important;
+  background-color: #A8A8B7 !important;
   border: 1px solid #fff !important;
 }
 .doughnutPalette9 {
-  background-color: #e051a9 !important;
+  background-color: #E051A9 !important;
   border: 1px solid #fff !important;
 }
 .doughnutPalette10 {
-  background-color: #a8a8b7 !important;
+  background-color: #FF903B !important;
   border: 1px solid #fff !important;
 }
 /* NOTE: charts use a palette only with 10 colors */
@@ -2109,44 +2109,44 @@ input.ui-igbutton {
 /* igChart */
 /***********/
 .ui-chart-palette-1 {
-  background-color: #8bdc5c !important;
-  border: 1px solid #8bdc5c !important;
+  background-color: #8BDC5C !important;
+  border: 1px solid #8BDC5C !important;
 }
 .ui-chart-palette-2 {
-  background-color: #8b5bb1 !important;
-  border: 1px solid #8b5bb1 !important;
+  background-color: #8961A9 !important;
+  border: 1px solid #8961A9 !important;
 }
 .ui-chart-palette-3 {
-  background-color: #6db1ff !important;
-  border: 1px solid #6db1ff !important;
+  background-color: #6DB1FF !important;
+  border: 1px solid #6DB1FF !important;
 }
 .ui-chart-palette-4 {
-  background-color: #f8a15f !important;
-  border: 1px solid #f8a15f !important;
+  background-color: #82E9D9 !important;
+  border: 1px solid #82E9D9 !important;
 }
 .ui-chart-palette-5 {
-  background-color: #ee5879 !important;
-  border: 1px solid #ee5879 !important;
+  background-color: #EA3C63 !important;
+  border: 1px solid #EA3C63 !important;
 }
 .ui-chart-palette-6 {
   background-color: #735656 !important;
   border: 1px solid #735656 !important;
 }
 .ui-chart-palette-7 {
-  background-color: #f7d262 !important;
-  border: 1px solid #f7d262 !important;
+  background-color: #F8CE4F !important;
+  border: 1px solid #F8CE4F !important;
 }
 .ui-chart-palette-8 {
-  background-color: #8ce7d9 !important;
-  border: 1px solid #8ce7d9 !important;
+  background-color: #A8A8B7 !important;
+  border: 1px solid #A8A8B7 !important;
 }
 .ui-chart-palette-9 {
-  background-color: #e051a9 !important;
-  border: 1px solid #e051a9 !important;
+  background-color: #E051A9 !important;
+  border: 1px solid #E051A9 !important;
 }
 .ui-chart-palette-10 {
-  background-color: #a8a8b7 !important;
-  border: 1px solid #a8a8b7 !important;
+  background-color: #FF903B !important;
+  border: 1px solid #FF903B !important;
 }
 /* NOTE: charts use a palette only with 10 colors */
 /* .ui-chart-palette-11 {
@@ -2159,23 +2159,23 @@ input.ui-igbutton {
 } */
 .ui-chart-maker-palette-1 {
   background-color: #ffffff !important;
-  border: 1px solid #8bdc5c !important;
+  border: 1px solid #8BDC5C !important;
 }
 .ui-chart-maker-palette-2 {
   background-color: #ffffff !important;
-  border: 1px solid #8b5bb1 !important;
+  border: 1px solid #8961A9 !important;
 }
 .ui-chart-maker-palette-3 {
   background-color: #ffffff !important;
-  border: 1px solid #6db1ff !important;
+  border: 1px solid #6DB1FF !important;
 }
 .ui-chart-maker-palette-4 {
   background-color: #ffffff !important;
-  border: 1px solid #f8a15f !important;
+  border: 1px solid #82E9D9 !important;
 }
 .ui-chart-maker-palette-5 {
   background-color: #ffffff !important;
-  border: 1px solid #ee5879 !important;
+  border: 1px solid #EA3C63 !important;
 }
 .ui-chart-maker-palette-6 {
   background-color: #ffffff !important;
@@ -2183,19 +2183,19 @@ input.ui-igbutton {
 }
 .ui-chart-maker-palette-7 {
   background-color: #ffffff !important;
-  border: 1px solid #f7d262 !important;
+  border: 1px solid #F8CE4F !important;
 }
 .ui-chart-maker-palette-8 {
   background-color: #ffffff !important;
-  border: 1px solid #8ce7d9 !important;
+  border: 1px solid #A8A8B7 !important;
 }
 .ui-chart-maker-palette-9 {
   background-color: #ffffff !important;
-  border: 1px solid #e051a9 !important;
+  border: 1px solid #E051A9 !important;
 }
 .ui-chart-maker-palette-10 {
   background-color: #ffffff !important;
-  border: 1px solid #a8a8b7 !important;
+  border: 1px solid #FF903B !important;
 }
 /* NOTE: charts use a palette only with 10 colors */
 /* .ui-chart-maker-palette-11 {
@@ -2250,23 +2250,23 @@ input.ui-igbutton {
 /* Doughnut Chart */
 /******************/
 .ui-doughnut-palette-1 {
-  background-color: #8bdc5c !important;
+  background-color: #8BDC5C !important;
   border: 1px solid #fff !important;
 }
 .ui-doughnut-palette-2 {
-  background-color: #8b5bb1 !important;
+  background-color: #8961A9 !important;
   border: 1px solid #fff !important;
 }
 .ui-doughnut-palette-3 {
-  background-color: #6db1ff !important;
+  background-color: #6DB1FF !important;
   border: 1px solid #fff !important;
 }
 .ui-doughnut-palette-4 {
-  background-color: #f8a15f !important;
+  background-color: #82E9D9 !important;
   border: 1px solid #fff !important;
 }
 .ui-doughnut-palette-5 {
-  background-color: #ee5879 !important;
+  background-color: #EA3C63 !important;
   border: 1px solid #fff !important;
 }
 .ui-doughnut-palette-6 {
@@ -2274,19 +2274,19 @@ input.ui-igbutton {
   border: 1px solid #fff !important;
 }
 .ui-doughnut-palette-7 {
-  background-color: #f7d262 !important;
+  background-color: #F8CE4F !important;
   border: 1px solid #fff !important;
 }
 .ui-doughnut-palette-8 {
-  background-color: #8ce7d9 !important;
+  background-color: #A8A8B7 !important;
   border: 1px solid #fff !important;
 }
 .ui-doughnut-palette-9 {
-  background-color: #e051a9 !important;
+  background-color: #E051A9 !important;
   border: 1px solid #fff !important;
 }
 .ui-doughnut-palette-10 {
-  background-color: #a8a8b7 !important;
+  background-color: #FF903B !important;
   border: 1px solid #fff !important;
 }
 /* NOTE: charts use a palette only with 10 colors */
@@ -2314,7 +2314,7 @@ input.ui-igbutton {
   padding: 5px 8px;
 }
 .ui-sparkline-sparkpath {
-  background: #8bdc5c;
+  background: #8BDC5C;
   border: 1px solid;
 }
 .ui-sparkline-negativesparkpath {
@@ -2326,11 +2326,11 @@ input.ui-igbutton {
   border: 2px solid;
 }
 .ui-sparkline-markers {
-  background: #8b5bb1;
+  background: #8961A9;
   border: 3px solid;
 }
 .ui-sparkline-firstmarker {
-  background: #f8a15f;
+  background: #82E9D9;
   border: 5px solid;
 }
 .ui-sparkline-lastmarker {
@@ -2338,11 +2338,11 @@ input.ui-igbutton {
   border: 5px solid;
 }
 .ui-sparkline-highmarker {
-  background: #6db1ff;
+  background: #6DB1FF;
   border: 4px solid;
 }
 .ui-sparkline-lowmarker {
-  background: #f7d262;
+  background: #F8CE4F;
   border: 3px solid;
 }
 .ui-sparkline-negativemarkers {
