--- a/src/css/structure/modules/infragistics.ui.chart.css
+++ b/src/css/structure/modules/infragistics.ui.chart.css
@@ -152,43 +152,43 @@
 
 .ui-chart-horizontal-axis-title {
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 12px;
-    color: #666;
+    font-size: 14px;
+    color: rgb(78,78,78);
     margin: 0px 0px 5px 0px;
 }
 
 .ui-chart-vertical-axis-title {
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 12px;
-    color: #666;
+    font-size: 14px;
+    color: rgb(78,78,78);
     margin: 0px 0px 0px 5px;
 }
 
 .ui-horizontal-axis-labels {
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 12px;
+    font-size: 14px;
     vertical-align: top;
     margin: 5px 0px 5px 0px;
-    color: #777;
+    color: rgb(78,78,78);
 }
 
 .ui-vertical-axis-labels {
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 12px;
+    font-size: 14px;
     text-align: right;
     margin: 0px 5px 0px 5px;
-    color: #777;
+    color: rgb(78,78,78);
 }
 
 .ui-angular-axis-labels {
     margin: 5px;
-    color: #777;
+    color: rgb(78,78,78);
 }
 
 .ui-radial-axis-labels {
     vertical-align: top;
     margin: 5px 0px 5px 0px;
-    color: #777;
+    color: rgb(78,78,78);
 }
 
 .ui-chart-category-axis-tick {
