--- a/src/css/themes/infragistics2012/modules/infragistics.ui.grid.less
+++ b/src/css/themes/infragistics2012/modules/infragistics.ui.grid.less
@@ -565,3 +565,9 @@ ui-iggrid-groupbyarea a,
 .ui-state-focus .ui-igcheckbox-container .ui-icon {
   color: @ui-icons-dark;
 }
+
+.ui-iggrid td.ui-iggrid-filtercell {
+  &::before {
+    color: @text-color;
+  }
+}
