--- a/src/css/themes/ios/modules/infragistics.ui.grid.less
+++ b/src/css/themes/ios/modules/infragistics.ui.grid.less
@@ -753,3 +753,9 @@ background-color: @igGray3;*/
 .ui-iggrid tbody .ui-iggrid-mergedcell.ui-iggrid-mergedcellsbottom:not(.ui-state-active) {
   border-bottom: 1px solid @igGray3;
 }
+
+.ui-iggrid td.ui-iggrid-filtercell {
+  &::before {
+    color: @text-color;
+  }
+}
