--- a/src/css/themes/metro/modules/infragistics.ui.grid.less
+++ b/src/css/themes/metro/modules/infragistics.ui.grid.less
@@ -896,6 +896,10 @@ ui-iggrid-groupbyarea a,
 .ui-iggrid td.ui-iggrid-filtercell {
   border: 0 none !important;
   background: #00AADE;
+
+  &::before {
+    color: @text-color;
+  }
 }
 /*Reset button on hide column dialog on grids */
 
