--- a/src/css/structure/modules/infragistics.ui.grid.css
+++ b/src/css/structure/modules/infragistics.ui.grid.css
@@ -686,15 +686,13 @@ body[dir="rtl"] .ui-iggrid-featurechoosericoncontainer {
     min-height     : 1.6em;
 }
 
-.ui-iggrid td.ui-iggrid-filtercell[data-column-label] {
-    &::before {
-        content: 'replace me';
-        /* TODO: Uncomment this after implementing the data-column-label attr and remove the one above  */
-        /*content: attr(data-column-label);*/
-        font-weight: bold;
-        font-size: 11px;
-        padding-inline-start: 4px;
-    }
+.ui-iggrid td.ui-iggrid-filtercell[data-column-label]::before {
+    content: 'replace me';
+    /* TODO: Uncomment this after implementing the data-column-label attr and remove the one above  */
+    /*content: attr(data-column-label);*/
+    font-weight: bold;
+    font-size: 11px;
+    padding-inline-start: 4px;
 }
 
 .ui-iggrid-filtercell input {
