feat(*): changing to real content replacement

--- a/src/css/structure/modules/infragistics.ui.grid.css
+++ b/src/css/structure/modules/infragistics.ui.grid.css
@@ -687,9 +687,7 @@ body[dir="rtl"] .ui-iggrid-featurechoosericoncontainer {
 }
 
 .ui-iggrid td.ui-iggrid-filtercell[data-column-label]::before {
-    content: 'replace me';
-    /* TODO: Uncomment this after implementing the data-column-label attr and remove the one above  */
-    /*content: attr(data-column-label);*/
+    content: attr(data-column-label);
     font-weight: bold;
     font-size: 11px;
     padding-inline-start: 4px;
